@@ -1,3 +1,8 @@
+2007-02-22  Patrick van Staveren <trick@vanstaveren.us>
+
+	* src/Base/CameraFile.cs: add another constructor to allow passing
+	of integer file descriptor.
+
 2007-02-04  Patrick van Staveren <trick@vanstaveren.us> 
 
 	* libgphoto2-sharp.mdp: Updated MonoDevelop project
